--- a/Final_Project/help.html
+++ b/Final_Project/help.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">Here you can find some examples of how to reference files in your HTML code for your Flask app.</span></p>
+<p class="p1"><span class="s1"><B>Here you can find some examples of how to reference files in your HTML code for your Flask app.</B></span></p>
 <p class="p1"><span class="s1"><br>
 </span></p>
 <p class="p1"><span class="s1">&lt;head&gt;</span></p>
@@ -73,5 +73,13 @@
 <p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;script src="{{ url_for('static',filename='js/main.js') }}"&gt;&lt;/script&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
+	
+To see a sample project that uses Flask and Observable see here:
+	Observable: https://observablehq.com/@electroshock666/w209-final-project-cryptocurrency-trader-dashboard/3<br>
+	Flask/HTML/JS: https://apps-fall22.ischool.berkeley.edu/w209-cryptocurrency/<br>
+	Github Repo: https://github.com/electroshock666/W209/tree/main/W209-BitCoin-Final-Project<br>
+
+	
+	
 </body>
 </html>
